#	This file is an input file used by the GNU "autoconf" program to
#	generate the file "configure", which is run during installation
#	to configure the system for the local environment.

AC_INIT(util, 1.0, saord@cfa.harvard.edu)
AC_CONFIG_SRCDIR([./xutil.h])
AC_CANONICAL_HOST
AC_PROG_CC
AC_PROG_RANLIB
m4_include([m4/ac_prog_ar.m4])
AC_PROG_AR
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h)
AC_CHECK_HEADERS(getopt.h)

AC_CONFIG_FILES(Makefile)

AC_OUTPUT
